samples/_failures_safe/1761426429_7f3341_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db741c59.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_db741c59.c:166:62: error: missing terminating " character
  166 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "UNKNOWN
      |                                                              ^~~~~~~~
./samples/SAFE/__tmp_db741c59.c:166:9: error: expected expression at end of input
  166 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "UNKNOWN
      |         ^~~~~~~~
./samples/SAFE/__tmp_db741c59.c:166:9: error: expected declaration or statement at end of input
